@@ -21,7 +21,7 @@
 ###################################################################
 
 evolver.d <- function(graph, niter=5, sd=FALSE, norm=FALSE,
-                      cites=TRUE, expected=TRUE, error=TRUE, debug=numeric()) {
+                      cites=FALSE, expected=FALSE, error=TRUE, debug=numeric()) {
 
   if (!is.igraph(graph)) {
     stop("Not a graph object!")
@@ -34,7 +34,7 @@ evolver.d <- function(graph, niter=5, sd=FALSE, norm=FALSE,
 }
 
 evolver.ad <- function(graph, niter=5, agebins=max(vcount(graph)/7100, 10),
-                       sd=FALSE, norm=FALSE, cites=TRUE, expected=TRUE, error=TRUE,
+                       sd=FALSE, norm=FALSE, cites=FALSE, expected=FALSE, error=TRUE,
                        debug=matrix(nc=2, nr=0)) {
   if (!is.igraph(graph)) {
     stop("Not a graph object!")
@@ -122,6 +122,19 @@ evolver.el <- function(graph, cats, niter=5, agebins=max(vcount(graph)/7100, 10)
 
   .Call("R_igraph_evolver_el", graph, as.numeric(cats), as.numeric(niter),
         as.numeric(agebins),
+        as.logical(sd), as.logical(norm), as.logical(cites), as.logical(expected),
+        as.logical(error), as.numeric(debug),
+        PACKAGE="igraph")
+}
+
+evolver.r <- function(graph, window, niter=5, sd=FALSE, norm=FALSE,
+                      cites=FALSE, expected=FALSE, error=TRUE, debug=numeric()) {
+
+  if (!is.igraph(graph)) {
+    stop("Not a graph object!")
+  }
+
+  .Call("R_igraph_evolver_r", graph, as.numeric(niter), as.numeric(window),
         as.logical(sd), as.logical(norm), as.logical(cites), as.logical(expected),
         as.logical(error), as.numeric(debug),
         PACKAGE="igraph")
